<resources>
    <string name="app_name">New AppToDo</string>
    <string name="title_tareas_fav">Favoritos</string>
    <string name="title_tareas">Tareas</string>
    <string name="title_completadas">Completadas</string>
    <string name="todo">todo</string>
    <string name="tv_nombre_tarea">Nombre Tarea</string>
    <string name="tv_fecha_tarea">Fecha</string>
    <string name="tv_hora_tarea">Hora</string>
    <string name="tv_tareaNueva">Tarea</string>
    <string name="tv_fecha_nueva">01/01/2021</string>
    <string name="tv_hora_nueva">00:00</string>
    <string name="tv_titulo_nueva_tarea">Nueva Tarea</string>
    <string name="tv_titulo_nom_tarea">Título tarea</string>
    <string name="Fecha">Fecha</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="textViewTareaFechaLimite">Fecha Límite (pulse para cambiar):</string>
    <string name="accionCrear_tarea">Crear Tarea</string>
    <string name="accionModificarTarea">Modificar</string>
    <string name="accionEliminarTarea">Eliminar</string>
    <string name="tv_tituloSplash">AppToDoList</string>
    <string name="tv_titulo_toolbar">Seleccionar Elementos</string>
    <string name="tv_nombre_tarea_hint">Nombre Tarea</string>
    <string name="tv_tituloAnhadirLocation">Añadir Localización</string>
    <string name="tv_posicion">Posición</string>
    <string name="tv_tituloPosicion">Posición</string>
    <string name="mensaje"> Esta seguro de eliminar esta tarea?</string>
    <string name="undo">UNDO</string>
    <string name="tv_anhadir_recordatorio">Añadir Recordatorio</string>
    <string name="txt_anhadir_recordatorio">Añadir Recordatorio</string>
    <string name="txt_minutos">Minutos</string>
    <string name="txt_dias">Días</string>
    <string name="txt_horas">Horas</string>
    <string name="txt_hint_introducir_un_digito">Introducir un digito</string>
    <string name="txt_ubicacion_actual">Ubicación Actual</string>
    <string name="mas">Mas</string>
    <string name="txt_coordenadas">lat: 00.0000, long:00.0000</string>
    <string name="txt_hora">Hora</string>
    <string name="tv_tituloHora">Hora</string>
    <string name="tv_hora_item">00:00h</string>
    <string name="new_notification">Recordatorio Tarea</string>
</resources>