<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tv_tituloRecordatorio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_splash"
        android:fontFamily="@font/russo_one"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:text="@string/txt_anhadir_recordatorio"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tituloRecordatorio">

        <EditText
            android:id="@+id/ed_digitoRecordatorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:background="@drawable/shape_editext_redondeado"
            android:ems="10"
            android:fontFamily="@font/russo_one"
            android:hint="@string/txt_hint_introducir_un_digito"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/magenta"
            android:textColorHint="#BAB9B9"
            android:textSize="15sp"
            tools:ignore="LabelFor,RtlSymmetry" />

        <RadioButton
            android:id="@+id/radioButton_min"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="@color/colorPrimary"
            android:fontFamily="@font/russo_one"
            android:text="@string/txt_minutos"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton_horas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="@color/colorPrimary"
            android:fontFamily="@font/russo_one"
            android:text="@string/txt_horas"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton_dias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:buttonTint="@color/colorPrimary"
            android:fontFamily="@font/russo_one"
            android:text="@string/txt_dias"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_boton_redondeado_verde"
        android:fontFamily="@font/russo_one"
        android:onClick="crearRecordatorio"
        android:text="@string/btn_aceptar"
        android:textColor="#020202"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_boton_redondeado"
        android:text="@string/btn_cancelar"
        android:textColor="#020202"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_aceptar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.100000024" />

</androidx.constraintlayout.widget.ConstraintLayout>