<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:padding="2dp"
        app:cardBackgroundColor="@null"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutTarea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorOnPrimary"
                android:backgroundTint="@android:color/holo_red_light"
                android:backgroundTintMode="screen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/checkBoxSeleccion"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="#FFFFFF"
                    android:buttonTint="#FFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_tareaNueva"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_tareaNueva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/tv_tareaNueva"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/checkBoxSeleccion"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_fechaNueva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/tv_fecha_nueva"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tareaNueva" />

                <TextView
                    android:id="@+id/tv_horaNueva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/tv_hora_item"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_fechaNueva"
                    app:layout_constraintStart_toEndOf="@+id/tv_fechaNueva"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.976" />

                <ImageView
                    android:id="@+id/imageViewMarcador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="6dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxSeleccion"
                    app:srcCompat="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/textViewPosicion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/txt_coordenadas"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewMarcador"
                    app:layout_constraintTop_toBottomOf="@+id/tv_fechaNueva" />

                <ImageButton
                    android:id="@+id/btn_Fav_blanco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_estrella_1_blanco" />

                <ImageButton
                    android:id="@+id/btn_Fav_amarillo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="25dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_estrella_1" />

                <ImageButton
                    android:id="@+id/btn_eliminar"
                    android:layout_width="24dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="6dp"
                    android:background="@null"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_Fav_amarillo"
                    app:srcCompat="@drawable/eliminar__1_" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>